build/log/idf_py_stdout_output_316462
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/david/esp/ESP32-s3_wifi_conect/build/bootloader/esp-idf/esptool_py && /home/david/.espressif/python_env/idf5.1_py3.12_env/bin/python /home/david/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/david/esp/ESP32-s3_wifi_conect/build/bootloader/bootloader.bin
Bootloader binary size 0x4ec0 bytes. 0x3140 bytes (38%) free.
[3/11] Building C object esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj
FAILED: esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj 
/home/david/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/david/esp/ESP32-s3_wifi_conect/build/config -I/home/david/esp/ESP32-s3_wifi_conect/components/wifi_conect -I/home/david/esp/esp-idf/components/newlib/platform_include -I/home/david/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/david/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/david/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/david/esp/esp-idf/components/freertos/esp_additions/include -I/home/david/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/david/esp/esp-idf/components/esp_hw_support/include -I/home/david/esp/esp-idf/components/esp_hw_support/include/soc -I/home/david/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/david/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/david/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/david/esp/esp-idf/components/heap/include -I/home/david/esp/esp-idf/components/log/include -I/home/david/esp/esp-idf/components/soc/include -I/home/david/esp/esp-idf/components/soc/esp32s3 -I/home/david/esp/esp-idf/components/soc/esp32s3/include -I/home/david/esp/esp-idf/components/hal/esp32s3/include -I/home/david/esp/esp-idf/components/hal/include -I/home/david/esp/esp-idf/components/hal/platform_port/include -I/home/david/esp/esp-idf/components/esp_rom/include -I/home/david/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/david/esp/esp-idf/components/esp_rom/esp32s3 -I/home/david/esp/esp-idf/components/esp_common/include -I/home/david/esp/esp-idf/components/esp_system/include -I/home/david/esp/esp-idf/components/esp_system/port/soc -I/home/david/esp/esp-idf/components/esp_system/port/include/private -I/home/david/esp/esp-idf/components/xtensa/include -I/home/david/esp/esp-idf/components/xtensa/esp32s3/include -I/home/david/esp/esp-idf/components/lwip/include -I/home/david/esp/esp-idf/components/lwip/include/apps -I/home/david/esp/esp-idf/components/lwip/include/apps/sntp -I/home/david/esp/esp-idf/components/lwip/lwip/src/include -I/home/david/esp/esp-idf/components/lwip/port/include -I/home/david/esp/esp-idf/components/lwip/port/freertos/include -I/home/david/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/david/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/david/esp/esp-idf/components/esp_event/include -I/home/david/esp/esp-idf/components/esp_wifi/include -I/home/david/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/david/esp/esp-idf/components/esp_phy/include -I/home/david/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/david/esp/esp-idf/components/esp_netif/include -I/home/david/esp/esp-idf/components/nvs_flash/include -I/home/david/esp/esp-idf/components/spi_flash/include -I/home/david/esp/esp-idf/components/esp_partition/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/david/esp/ESP32-s3_wifi_conect=. -fmacro-prefix-map=/home/david/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj -MF esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj.d -o esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj -c /home/david/esp/ESP32-s3_wifi_conect/components/wifi_conect/wifi_conect.c
/home/david/esp/ESP32-s3_wifi_conect/components/wifi_conect/wifi_conect.c: In function 'wifi_conect_get_ip':
/home/david/esp/ESP32-s3_wifi_conect/components/wifi_conect/wifi_conect.c:138:10: error: implicit declaration of function 'wifi_conect_is_connected' [-Werror=implicit-function-declaration]
  138 |     if (!wifi_conect_is_connected()) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~
/home/david/esp/ESP32-s3_wifi_conect/components/wifi_conect/wifi_conect.c: At top level:
/home/david/esp/ESP32-s3_wifi_conect/components/wifi_conect/wifi_conect.c:162:6: error: conflicting types for 'wifi_conect_is_connected'; have '_Bool(void)'
  162 | bool wifi_conect_is_connected(void)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
/home/david/esp/ESP32-s3_wifi_conect/components/wifi_conect/wifi_conect.c:138:10: note: previous implicit declaration of 'wifi_conect_is_connected' with type 'int()'
  138 |     if (!wifi_conect_is_connected()) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[4/11] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
